--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mitch/hashids",
+    "name": "ludo237/hashids",
     "description": "Laravel package for Hashids",
     "authors": [
         {
@@ -10,7 +10,7 @@
     "require": {
         "php": ">=5.3.0",
         "illuminate/support": "4.x",
-        "hashids/hashids": "dev-master"
+        "hashids/hashids": "*"
     },
     "autoload": {
         "psr-0": {
