--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,10 @@
             "name": "Mitchell van Wijngaarden",
             "email": "hey@mitchellvanwijngaarden.nl"
         }
+        {
+            "name": "Claudio Ludovico Panetta"
+            "twtter": "@Ludo237"
+        }
     ],
     "require": {
         "php": ">=5.3.0",
