--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
             "email": "hey@mitchellvanwijngaarden.nl"
         },
         {
-            "name": "Claudio Ludovico Panetta"
+            "name": "Claudio Ludovico Panetta",
             "twtter": "@Ludo237"
         }
     ],
