--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         },
         {
             "name": "Claudio Ludovico Panetta",
-            "twtter": "@Ludo237"
+            "email": "ludo@6go.it"
         }
     ],
     "require": {
