--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "php": ">=5.3.0",
         "illuminate/support": "4.x",
-        "hashids/hashids": "0.3.*"
+        "hashids/hashids": "0.3.x"
     },
     "autoload": {
         "psr-0": {
@@ -25,7 +25,7 @@
     "prefer-stable": true,
     "extra": {
         "branch-alias": {
-            "dev-master": "1.x-dev"
+            "dev-master": "1.x@dev"
         }
     }
 }
