--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
             "Ludo237\\Hashids": "src/"
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true,
     "extra": {
         "branch-alias": {
