--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "prefer-stable": true,
     "extra": {
         "branch-alias": {
-            "dev-master": "1.1"
+            "master": "1.1",
+            "dev-master": "1.x@dev"
         }
     }
 }
