--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,7 @@
     "prefer-stable": true,
     "extra": {
         "branch-alias": {
-            "master": "1.1",
-            "dev-master": "1.x@dev"
+            "dev-master": "1.x-dev"
         }
     }
 }
