--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "php": ">=5.3.0",
         "illuminate/support": "4.x",
-        "hashids/hashids": "0.3.x"
+        "hashids/hashids": "0.3.x-dev"
     },
     "autoload": {
         "psr-0": {
