--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "ludo237/hashids",
     "description": "Laravel package for Hashids",
     "license": "MIT",
-    "keywords": ["Laravel", "Hashids", "Hashing", "Security"]
+    "keywords": ["Laravel", "Hashids", "Hashing", "Security"],
     "authors": [
         {
             "name": "Mitchell van Wijngaarden",
