--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "require": {
         "php": ">=5.3.0",
         "illuminate/support": "4.x",
-        "hashids/hashids": "0.3.x-dev"
+        "hashids/hashids": "dev-master"
     },
     "autoload": {
         "psr-0": {
